<resources>
    <string name="app_name">App Security 2.0 </string>
    <string name="startBtn">Start Monitoring</string>
    <string name="stopBtn">Stop Monitoring</string>
    <string name="projectTitle">Security Toolkit v1.0</string>
    <string name="app_analysis_btn_text">App Analysis</string>
    <string name="itemIcon">App Icon</string>
    <string name="app_name_text">Sample App</string>
    <string name="app_package_text">com.example.sampleapp</string>
    <string name="about_btn_text">About</string>
    <string name="Scan">Scan</string>
    <string name="title_activity_scan">ScanActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>