<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="8dp" >

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:maxHeight="48dp"
                android:maxWidth="48dp"
                android:contentDescription="@string/itemIcon"
                tools:srcCompat="@tools:sample/avatars"
                tools:src="@color/colorPrimary" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/appIcon"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/appIcon"
                android:layout_toStartOf="@+id/menuBtn"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:maxLines="1"
                android:text="@string/app_name_text"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/appPackageName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appName"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/appIcon"
                android:layout_toStartOf="@+id/menuBtn"
                android:ellipsize="end"
                android:fontFamily="sans-serif-thin"
                android:maxLines="1"
                android:text="@string/app_package_text"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/menuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:src="@drawable/menu_btn"
                android:tint="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/analyseBtn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Analyse"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/extractBtn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Extract Apk"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/uninstallBtn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Uninstall"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>